# maj2random

./: CMakeLists.txt  README.md
src/: bench_maj2.cc  cpuident.c  maj2random.h  test_maj2.c
